<resources>
    <string name="app_name">zpone</string>
    <string name="ble_not_supported">Not support BLE</string>
    <string name="error_bluetooth_not_supported">Not support Bluetooth</string>
    <string name="nameTitle">Your Email</string>
    <string name="passwordTitle">Password</string>
    <string name="login">LOGIN</string>
    <string name="signUP">Sign Up</string>
    <string name="bt_connect">Connect Device</string>
    <string name="unknown_device">Unknown device</string>
    <string name="connected_title">Device Connected</string>
    <string name="count_down_time">Start after 3S</string>
    <string name="start">Go now</string>
    <string name="restart">Restart</string>
    <string name="stop">Stop</string>
    <string name="connect_bluetooth">connect BT</string>
    <string name="data_record">Data Record</string>
    <string name="best">Best</string>
    <string name="History">History</string>
    <string name="retest">Retest</string>
    <string name="max_power">Max Power</string>
    <string name="longest_time">Longest Time</string>
    <string name="max_cadence">Max Cadence</string>
    <string name="longest_distance">Longest Distance</string>
    <string name="max_calorie">Max Calorie</string>
    <string name="max_speed">Max Speed</string>
    <string name="recent">Recent</string>
    <string name="tranning_time">Tranning Time</string>
    <string name="avg_power">AVG Power</string>
    <string name="current_power">Current Power</string>
    <string name="adc_calibration">ADC Clibration</string>
    <string name="calibration_hint">Please put the crank upright</string>
    <string name="zpower_cancel">Cancel</string>
    <string name="zpower_ok">OK</string>
    <string name="bt_disconnect">BT Disconnect</string>
    <string name="bt_connect_now">Connect device now？</string>
    <string name="connecting_bluetooth">Connecting</string>
    <string name="end_cycling">Finish Cycling</string>
    <string name="end_cycling_confim">Finish this cycling?</string>
    <string name="connect_success">Connect success</string>
    <string name="bt_disconnected">Device disconnected</string>
    <string name="btn_scan">Scan</string>
    <string name="btn_skip">Skip</string>
    <string name="setting">Setting</string>
    <string name="my_account">My account</string>
    <string name="unit_distance">mile/kilometer</string>
    <string name="device_info">Device infor</string>
    <string name="height">Height(cm)</string>
    <string name="weight">Weight(kg)</string>
    <string name="age">Age</string>
    <string name="click_to_setting">Setting</string>
    <string name="device_name">Name</string>
    <string name="bt_mac">Mac</string>
    <string name="power_meter">Power meter</string>
    <string name="model">Model</string>
    <string name="serial_number">Serial number</string>
    <string name="version">Version</string>
    <string name="mile">Mile</string>
    <string name="kilometer">Kilometer</string>
    <string name="battery_level">Battery level</string>
    <string name="low_battery">Low battery warning</string>
    <string name="exit_hint">press back key again to exit the program</string>
    <string name="permission_ok">User agrees to authorize</string>
    <string name="permission_no">User refuses to authorize</string>
    <string name="empty_warning">Email or password can\'t be empty</string>
    <string name="login_success">Login success</string>
    <string name="login_faile">Email or password maybe wrong</string>
    <string name="email_format_warning">Emai fromat is incorrect</string>
    <string name="sign_in_success">Sign in success</string>
    <string name="sigin_in_failed">the email has registed</string>
    <string name="location_permission_request">Need open location service to scan ble device</string>
    <string name="open_location_service">Location service</string>
    <string name="btn_search">Search</string>
    <string name="invalid_mac_adress">Invalid Bluetooth address</string>
   <string name="viewfinderview_status_text1">将二维码/条码放入取景框内</string>
    <string name="viewfinderview_status_text2">即可自动扫描</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="button_ok">确定</string>

</resources>
