<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorPrimary">
    <RelativeLayout
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">
        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:src="@mipmap/back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/iv_back"
            android:text="@string/setting"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/device_info"
            android:textColor="@android:color/white"
            android:textSize="26sp" />
    </RelativeLayout>
    <include
        layout="@layout/line_divider"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <TextView
            style="@style/fragment_setting_text"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/device_name" />

        <TextView
            style="@style/fragment_setting_account_text"
            android:text="@string/power_meter" />
    </RelativeLayout>
    <include
        layout="@layout/line_divider"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="30dp"/>
    <include
        layout="@layout/line_divider"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <TextView
            style="@style/fragment_setting_text"
            android:text="@string/bt_mac" />
        <TextView
            android:id="@+id/tv_bt_mac"
            style="@style/fragment_setting_info"
            />
    </RelativeLayout>
    <include
        layout="@layout/line_divider"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <TextView
            style="@style/fragment_setting_text"
            android:text="@string/model" />
        <TextView
            style="@style/fragment_setting_info"
            android:text="ZPower"/>
    </RelativeLayout>
    <include
        layout="@layout/line_divider"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <TextView
            style="@style/fragment_setting_text"
            android:text="@string/serial_number" />
        <TextView
            style="@style/fragment_setting_info"
            android:text="A123435"/>
    </RelativeLayout>
    <include
        layout="@layout/line_divider"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <TextView
            style="@style/fragment_setting_text"
            android:text="@string/version" />
        <TextView
            style="@style/fragment_setting_info"
            android:text="1.2.1"/>
    </RelativeLayout>
    <include
        layout="@layout/line_divider"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <TextView
            style="@style/fragment_setting_text"
            android:text="@string/battery_level" />
        <TextView
            android:id="@+id/tv_battery_level"
            style="@style/fragment_setting_info"
            />
    </RelativeLayout>
    <include
        layout="@layout/line_divider"/>
</LinearLayout>