<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorPrimary">
    <RelativeLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">
        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:src="@mipmap/back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/iv_back"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/setting"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/my_account"
            android:textColor="@android:color/white"
            android:textSize="26sp"/>
    </RelativeLayout>
    <include
        layout="@layout/line_divider"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/default_account_photo"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:id="@+id/tv_id"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:text="wildgreen@163.com"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:gravity="center"/>
    <include
        layout="@layout/line_divider"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <TextView
            style="@style/fragment_setting_text"
            android:text="@string/height" />

        <EditText
            android:id="@+id/et_height"
            style="@style/fragment_setting_account_text"
            android:hint="@string/click_to_setting" />
    </RelativeLayout>
    <include
        layout="@layout/line_divider"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <TextView
            style="@style/fragment_setting_text"
            android:text="@string/weight" />

        <EditText
            android:id="@+id/et_weight"
            style="@style/fragment_setting_account_text"
            android:hint="@string/click_to_setting" />

    </RelativeLayout>
    <include
        layout="@layout/line_divider"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <TextView
            style="@style/fragment_setting_text"
            android:text="@string/age" />

        <EditText
            android:id="@+id/et_age"
            style="@style/fragment_setting_account_text"
            android:hint="@string/click_to_setting" />
    </RelativeLayout>
    <include
        layout="@layout/line_divider"/>

</LinearLayout>