<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/colorPrimary">
    <RelativeLayout
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:src="@mipmap/back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/setting"
            android:textColor="@android:color/white"
            android:textSize="26sp"/>
    </RelativeLayout>
    <View
        android:layout_width="wrap_content"
        android:layout_height="50dp"/>
    <include
        layout="@layout/line_divider"/>

    <RelativeLayout
        android:id="@+id/RL_my_account"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:clickable="true">
        <TextView
            style="@style/fragment_setting_text"
            android:text="@string/my_account"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/next"/>
    </RelativeLayout>
    <include
        layout="@layout/line_divider"/>
    <RelativeLayout
        android:id="@+id/RL_mile_or_km"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:clickable="true">
        <TextView
            style="@style/fragment_setting_text"
            android:text="@string/unit_distance"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/next"/>
    </RelativeLayout>
    <include
        layout="@layout/line_divider"/>
    <RelativeLayout
        android:id="@+id/RL_equipment_info"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:clickable="true">
        <TextView
            style="@style/fragment_setting_text"
            android:text="@string/device_info"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/next"/>
    </RelativeLayout>
    <include
        layout="@layout/line_divider"/>

</LinearLayout>