<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg"
    android:orientation="vertical">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:src="@mipmap/logo"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/blurry_bg">
        <TextView
            android:text="@string/nameTitle"
            style="@style/tv_in_login_and_sign_up"/>
        <EditText
            android:id="@+id/et_email"
            style="@style/et_in_login_and_sign_up"/>
        <include
            layout="@layout/line_divider"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/blurry_bg">
        <TextView
            android:text="@string/passwordTitle"
            style="@style/tv_in_login_and_sign_up"/>
        <EditText
            android:id="@+id/et_password"
            android:inputType="textPassword"
            style="@style/et_in_login_and_sign_up"/>
    </LinearLayout>
    <Button
        android:id="@+id/btn_login"
        style="@style/btn_in_login_and_sign_up"
        android:text="@string/login"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="@color/blurry_bg"
        android:gravity="center"
        >
        <TextView
            android:id="@+id/tv_new_here"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New here?"
            android:layout_marginRight="5dp"
            android:textSize="20sp"
            android:textColor="@android:color/white"/>
        <TextView
            android:id="@+id/tv_to_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/sign_text"
            android:textSize="20sp"
            android:text="Sign up"
            android:clickable="true"/>
    </LinearLayout>
</LinearLayout>
