<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@mipmap/bg">
    <LinearLayout
        android:id="@+id/LL_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:src="@mipmap/back"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/data_record"
                android:textColor="@android:color/white"
                android:textSize="26sp"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:background="@color/blurry_bg"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/best"
                android:clickable="true"
                android:id="@+id/tv_best"
                android:layout_centerInParent="true"
                android:textSize="20sp"
                android:textColor="@color/white"
                />
                <LinearLayout
                    android:id="@+id/divider_line_best"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/btn_bg"
                    android:orientation="vertical"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/History"
                    android:clickable="true"
                    android:id="@+id/tv_history"
                    android:layout_centerInParent="true"
                    android:textSize="20sp"
                    android:textColor="@color/white"/>
                <LinearLayout
                    android:id="@+id/divider_line_history"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/btn_bg"
                    android:visibility="invisible"
                    android:orientation="vertical"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/data_frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/LL_data"
        android:layout_alignParentBottom="true">

    </FrameLayout>

</RelativeLayout>